--- a/css/index.css
+++ b/css/index.css
@@ -69,7 +69,7 @@
 #home_tri{
     width:100px;
     height:100px;
-    background-color:#6699cc;
+    background-color:#2c3b4a;
     text-align:center;
     position:absolute;
     left:50%;
@@ -126,7 +126,7 @@
 #opus div:hover #opus div a{
     text-decoration:underline;
 }
-/*作品详情提示样式*/
+/*更多点击*/
 #det_box{
     margin-top:286px;
     margin-left:50px;
@@ -136,4 +136,86 @@
     background-color:white;
     float:left;
     border-radius:5px;
+}
+/*掌握技能*/
+#skill{
+    overflow:hidden;
+    width:auto;
+    padding-top:100px;
+    padding-left:100px;
+    float:left;
+}
+#ski_list{
+    width:310px;
+    height:auto;
+}
+.ski_item{
+    widht:100%;
+    height:auto;
+    color:#e26c60;
+    margin-bottom:20px;
+}
+.ski_ico{
+    width:20px;
+    height:20px;
+    border-radius:50%;
+    background-color:#e26c60;
+    display:inline-block;
+    margin-top:10px;
+}
+.ski_text{
+    font-size:26px;
+    font-weight:bold;
+    margin-left:15px;
+    line-height:30px;
+}
+.ski_item p,#frame p{
+    margin-left:20px;
+    font-size:12px;
+    line-height:16px;
+    margin-top:5px;
+}
+.ski_item p span,#frame p span{
+    width:10px;
+    height:10px;
+    border-radius:50%;
+    background-color:#e26c60;
+    display:inline-block;
+}
+/*技能长框*/
+#ski_box{
+    font:bold 20px/40px "微软雅黑";
+    color:#170101;
+    text-align:center;
+    margin-right:10px;
+}
+.ski_box_html{
+    width:400px;
+    height:40px;
+    background-color:red;
+    border-radius:10px;
+    margin-top:40px;
+}
+.ski_box_css{
+    width:350px;
+    height:40px;
+    background-color:blue;
+    border-radius:10px;
+    margin-top:85px;
+}
+.ski_box_js{
+    width:300px;
+    height:40px;
+    background-color:yellow;
+    border-radius:10px;
+    margin-top:105px;
+}
+/*框架展示部分*/
+#frame{
+    margin-left:80px;
+    color:#e26c60;
+}
+#frame p{
+    font-size:16px;
+    margin-bottom:10px;
 }
