--- a/css/index.css
+++ b/css/index.css
@@ -261,22 +261,37 @@
 
 /*响应式   适配移动端*/
 @media all and (max-width:700px ){
+    #su_img{
+        width:100%;
+        height:100%;
+    }
 	#ski_box{
         display:none;
     }
     #skill{
-        padding-left:50px;
-        padding-top:100px;
+        padding-left:20px;
+        padding-top:50px;
     }
     #ski_list{
         width:600px;
 
     }
     .ski_item{
-        float:left;
-        width:280px;
         margin-right:10px;
-        margin-bottom:100px;
+        margin-bottom:20px;
+    }
+    .ski_ico{
+        width:10px;
+        height:10px;
+        margin-top:5px;
+    }
+    .ski_text{
+        font-size:16px;
+        line-height:20px;
+    }
+    .ski_item p, #frame p{
+        font-size:14px;
+        line-height:18px;
     }
     .ski_au{
         display:block;
@@ -285,13 +300,22 @@
         display:none;
     }
     #opus{
-        width:600px;
+        width:400px;
+        padding-top:60px;
+        padding-left:5px;
+    }
+    #opus div{
+        margin:0;
+        margin-right:5px;
+        margin-bottom:10px;
     }
     #opus img{
         width:180px;
         height:120px;
     }
     #det_box{
-        margin-left:0;
+        width:120px;
+        margin:0 auto;
+        margin-left:30%;
     }
 }
