--- a/css/index.css
+++ b/css/index.css
@@ -265,8 +265,8 @@
         padding:50px;
     }
     #su_img{
-        width:100%;
-        height:100%;
+        width:150px;
+        height:150px;
     }
 	#ski_box{
         display:none;
