--- a/css/index.css
+++ b/css/index.css
@@ -264,6 +264,9 @@
     #home{
         padding:50px;
     }
+    #sub_text{
+        display:none;
+    }
     #home h1{
         margin-bottom:10px;
     }
@@ -285,7 +288,7 @@
     }
     .ski_item{
         margin-right:10px;
-        margin-bottom:10px;
+        margin-bottom:5px;
     }
     .ski_ico{
         width:10px;
