--- a/css/index.css
+++ b/css/index.css
@@ -109,6 +109,9 @@
     color:white;
     font-weight:bold;
 }
+#more h1,#more h2,#more p{
+    margin-bottom:10px;
+}
 #more a{
     color:#3f7c61;
 }
@@ -261,6 +264,9 @@
 
 /*响应式   适配移动端*/
 @media all and (max-width:700px ){
+    #head_top a:hover{
+        background-color:#22b573;
+    }
     #home{
         padding:50px;
     }
@@ -279,7 +285,7 @@
         display:none;
     }
     #skill{
-        padding-left:20px;
+        padding-left:2%;
         padding-top:50px;
     }
     #ski_list{
@@ -310,17 +316,18 @@
         display:none;
     }
     #opus{
-        width:400px;
+        width:95%;
         padding-top:60px;
-        padding-left:5px;
+        padding-left:10%;
     }
     #opus div{
         margin:0;
-        margin-right:5px;
+        margin-right:5%;
         margin-bottom:10px;
+        width:45%;
     }
     #opus img{
-        width:180px;
+        width:100%;
         height:120px;
     }
     #det_box{
