--- a/css/index.css
+++ b/css/index.css
@@ -257,7 +257,7 @@
     z-index:999;
     width:100%;
     height:100%;
-    background:url(../img/loading.gif) #fff no-repeat 50% 50%;
+    background:url(../img/loading.gif) #fdfbfb no-repeat 50% 50%;
 
 }
 
